--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -9,6 +9,16 @@
 	string column = (string)ViewData["Column"]!;
 	string orderBy = (string)ViewData["OrderBy"]!;
 
+	HtmlString getArrow(string tableColumn)
+	{
+		if (tableColumn != column) return new HtmlString("");
+		if(orderBy == "desc")
+		{
+			return new HtmlString("&darr;");
+		}
+		return new HtmlString("&uarr;");
+	}
+
 }
 
 <h2 class="text-center mb-5" > List of Products</h2>
@@ -44,13 +54,13 @@
 <table class="table">
 	<thead>
 		<tr>
-			<th style="cursor: pointer" onclick="sortTable('Id')">ID</th>
-			<th style="cursor: pointer" onclick="sortTable('Name')">Name</th>
-			<th style="cursor: pointer" onclick="sortTable('Brand')">Brand</th>
-			<th style="cursor: pointer" onclick="sortTable('Category')">Category</th>
-			<th style="cursor: pointer" onclick="sortTable('Price')">Price</th>
+			<th style="cursor: pointer" onclick="sortTable('Id')">ID @getArrow("Id")</th>
+			<th style="cursor: pointer" onclick="sortTable('Name')">Name @getArrow("Name")</th>
+			<th style="cursor: pointer" onclick="sortTable('Brand')">Brand @getArrow("Brand")</th>
+			<th style="cursor: pointer" onclick="sortTable('Category')">Category @getArrow("Category")</th>
+			<th style="cursor: pointer" onclick="sortTable('Price')">Price @getArrow("Price")</th>
 			<th>Image</th>
-			<th style="cursor: pointer" onclick="sortTable('CreatedAt')">Created At</th>
+			<th style="cursor: pointer" onclick="sortTable('CreatedAt')">Created At @getArrow("CreatedAt")</th>
 			<th>Action</th>
 		</tr>
 	
