--- a/Views/Store/Index.cshtml
+++ b/Views/Store/Index.cshtml
@@ -1,8 +1,42 @@
-﻿
+﻿ @model StoreSearchModel
 @{
 }
 
 <h2 class="pb-4 text-center">Products</h2>
+
+<form class="row g-3 mb-3">
+    <div class="col-lg-2 col-md-4">
+        <select class="form-select" name="brand" asp-for="Brand" onchange="this.form.submit()">
+            <option value="">All Brands</option>
+            <option value="Samsung">Samsung</option>
+            <option value="Apple">Apple</option>
+            <option value="Nokia">Nokia</option>
+            <option value="HP">HP</option>
+        </select>
+    </div>
+    <div class="col-lg-2 col-md-4">
+        <select class="form-select" name="category" asp-for="Category" onchange="this.form.submit()">
+            <option value="">All Categories</option>
+            <option value="Phones">Phones</option>
+            <option value="Computers">Computers</option>
+            <option value="Accessories">Accessories</option>
+            <option value="Printers">Printers</option>
+            <option value="Cameras">Cameras</option>
+            <option value="Other">Other</option>
+        </select>
+    </div>
+    <div class="col-lg-2 col-md-4">
+        <select class="form-select" name="sort" asp-for="Sort" onchange="this.form.submit()">
+            <option value="newest">Order By Newest</option>
+            <option value="price_asc">Price: Low to High</option>
+            <option value="price_desc">Price: High to Low</option>
+        </select>
+    </div>
+    <div class="col-lg-6 col-md-12 d-flex">
+        <input class="form-control me-2" name="search" asp-for="Search" placeholder="Search by Name">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+    </div>
+</form>
 
 <div class="row mb-5 g-3">
     @foreach (var product in ViewBag.Products)
@@ -27,6 +61,7 @@
     }
 </div>
  
+
 <nav>
     <ul class="pagination">
         @for (int i = 1; i <= ViewBag.TotalPages; i++)
@@ -34,7 +69,9 @@
             string active = "";
             if (i == ViewBag.PageIndex) active = "active";
             <li class="page-item @active">
-                <a class="page-link" asp-route-pageIndex="@i">@i</a>
+                <a class="page-link" asp-route-pageIndex="@i"
+                   asp-route-search="@Model.Search" asp-route-brand="@Model.Brand"
+                   asp-route-category="@Model.Category" asp-route-sort="@Model.Sort">@i</a>
             </li>
         }
     </ul>
