42. Update user profile / Learned: The use of object when passing and updating data

--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model ProfileDto
 @using Microsoft.AspNetCore.Identity
 @inject UserManager<ApplicationUser> UserManager
 @{
@@ -8,13 +8,12 @@
 	if (User.IsInRole("admin")) userRole = "Admin";
 	if (User.IsInRole("seller")) userRole = "Seller";
 	if (User.IsInRole("client")) userRole = "Client";
-
 }
 
 <div class="row">
 	<div class="col-md-8 mx-auto rounded border p-4">
 		<h2 class="mb-3">Profile</h2>
-		<hr />
+		<hr /> 
 
 		@if (ViewBag.ErrorMessage != null)
 		{
@@ -91,6 +90,55 @@
 			</div>
 			<div class="modal-body">
 
+				<form method="post">
+					<div class="row mb-2">
+						<label class="col-sm-4 col-form-label">First Name</label>
+						<div class="col-sm-8">
+							<input class="form-control" asp-for="FirstName">
+							<span asp-validation-for="FirstName" class="text-danger"></span>
+						</div>
+					</div>
+
+					<div class="row mb-2">
+						<label class="col-sm-4 col-form-label">Last Name</label>
+						<div class="col-sm-8">
+							<input class="form-control" asp-for="LastName">
+							<span asp-validation-for="LastName" class="text-danger"></span>
+						</div>
+					</div>
+
+					<div class="row mb-2">
+						<label class="col-sm-4 col-form-label">Email</label>
+						<div class="col-sm-8">
+							<input class="form-control" asp-for="Email">
+							<span asp-validation-for="Email" class="text-danger"></span>
+						</div>
+					</div>
+
+					<div class="row mb-2">
+						<label class="col-sm-4 col-form-label">Phone</label>
+						<div class="col-sm-8">
+							<input class="form-control" asp-for="PhoneNumber">
+							<span asp-validation-for="PhoneNumber" class="text-danger"></span>
+						</div>
+					</div>
+
+					<div class="row mb-2">
+						<label class="col-sm-4 col-form-label">Address</label>
+						<div class="col-sm-8">
+							<input class="form-control" asp-for="Address">
+							<span asp-validation-for="Address" class="text-danger"></span>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="offset-sm-4 col-sm-8">
+							<button type="submit" class="btn btn-primary">Submit</button>
+						</div>
+					</div>
+
+				</form>
+
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -98,5 +146,3 @@
 		</div>
 	</div>
 </div>
-
-
